k8s_conf/deployment-jackett.yml
kind: Service
apiVersion: v1
metadata:
  name: jackett
spec:
  selector:
    app: jackett
  ports:
  - protocol: TCP
    port: 9117
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: transmission
        image: lsioarmhf/jackett
        ports:
        - containerPort: 9117
        volumeMounts:
        - mountPath: /config
          name: jackett-config
      volumes:
      - name: jackett-config
        persistentVolumeClaim:
          claimName: jackett-config
