k8s_conf/deployment-radarr.yml
kind: Service
apiVersion: v1
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
  - protocol: TCP
    port: 7878
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: transmission
        image: lsioarmhf/radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: /config
          name: radarr-config
        - mountPath: /downloads
          name: downloads
        - mountPath: /movies
          name: nfs-movies
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: nfs-movies
        persistentVolumeClaim:
          claimName: nfs-movies
