k8s_conf/deployment-sickrage.yml
kind: Service
apiVersion: v1
metadata:
  name: sickrage
spec:
  selector:
    app: sickrage
  ports:
  - protocol: TCP
    port: 8081
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sickrage
  labels:
    app: sickrage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sickrage
  template:
    metadata:
      labels:
        app: sickrage
    spec:
      containers:
      - name: sickrage
        image: lsioarmhf/sickrage:latest
        # livenessProbe:
        #   httpGet:
        #     path: /home
        #     port: 8081
        #   initialDelaySeconds: 180
        #   periodSeconds: 30
        # readinessProbe:
        #   httpGet:
        #     path: /home
        #     port: 8081
        #   initialDelaySeconds: 180
        #   periodSeconds: 30
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: /config
          name: sickrage-config
        - mountPath: /tv
          name: nfs-series
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: sickrage-config
        persistentVolumeClaim:
          claimName: sickrage-config
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: nfs-series
        persistentVolumeClaim:
          claimName: nfs-series
