k8s_conf/service-sickrage.yml
kind: Service
apiVersion: v1
metadata:
  name: sickrage
spec:
  selector:
    app: sickrage
  ports:
  - protocol: TCP
    port: 8081
  type: NodePort
