k8s_conf/deployment-couchpotato.yml
kind: Service
apiVersion: v1
metadata:
  name: couchpotato
spec:
  selector:
    app: couchpotato
  ports:
  - protocol: TCP
    port: 5050
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: couchpotato
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: couchpotato.local
    http:
      paths:
      - path: /
        backend:
          serviceName: couchpotato
          servicePort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchpotato
  labels:
    app: couchpotato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchpotato
  template:
    metadata:
      labels:
        app: couchpotato
    spec:
      containers:
      - name: transmission
        image: lsioarmhf/couchpotato
        ports:
        - containerPort: 5050
        volumeMounts:
        - mountPath: /config
          name: couchpotato-config
        - mountPath: /downloads
          name: downloads
        - mountPath: /movies
          name: nfs-movies
      volumes:
      - name: couchpotato-config
        persistentVolumeClaim:
          claimName: couchpotato-config
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: nfs-movies
        persistentVolumeClaim:
          claimName: nfs-movies
